Worked on radix